Link Preview Fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,45 +31,44 @@
 @layer base {
   /* inter var - latin */
   @font-face {
-    font-family: "Zen Dot";
+    font-family: 'Zen Dot';
     font-style: normal;
     font-weight: 100 900;
     font-display: optional;
-    src: url("/fonts/inter-var-latin.woff2") format("woff2");
+    src: url('/fonts/inter-var-latin.woff2') format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
       U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
       U+2215, U+FEFF, U+FFFD;
   }
 
   .cursor-newtab {
-    cursor: url("/images/new-tab.png") 10 10, pointer;
+    cursor: url('/images/new-tab.png') 10 10, pointer;
   }
 
   /* #region  /**=========== Typography =========== */
 
   h1,
   .h1 {
-    @apply font-primary text-2xl font-bold tracking-tight md:text-4xl;
+    @apply font-sans text-2xl font-bold tracking-tight md:text-4xl;
   }
 
   h2,
   .h2 {
-    @apply font-primary text-xl font-bold md:text-3xl;
   }
 
   h3,
   .h3 {
-    @apply font-primary text-lg font-bold md:text-2xl;
+    @apply mt-8 mb-4 font-sans text-lg font-bold leading-snug  md:text-2xl;
   }
 
   h4,
   .h4 {
-    @apply font-primary text-base font-bold md:text-lg;
+    @apply font-sans text-base font-bold md:text-lg;
   }
 
   body,
   .p {
-    @apply font-secondary text-sm md:text-base;
+    @apply font-mono text-sm text-gray-500 md:text-base;
   }
   /* #endregion  /**======== Typography =========== */
 
@@ -116,7 +115,6 @@
 
 html,
 body {
-  background-color: black;
   color: var(--text-color);
   padding: 0;
   margin: 0;
